# financial_monitor_market

./: .vscode  DECISIONS.md  Dockerfile  README.md  crypto.ipynb  docker-compose.yml  financial_market_monitor.py  financial_market_montior.ipynb  main.py  pyproject.toml  requirements.txt
dags/: crypto.py  finance_pipeline.py  stocks.py
dbt_finance/: .user.yml  dbt_project.yml  profiles.yml
dbt_finance/models/: schema.yml  soucers.yml
dbt_finance/models/marts/: mart_daily_performance.sql  mart_volatility.sql
dbt_finance/models/staging/: stg_crypto_prices.sql  stg_stock_prices.sql
dbt_finance/tests/: assert_price_positive.sql
